shopping-cart.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http2
  selector:
    app: shopping-cart
  type: LoadBalancer

---

apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "shopping-cart"
spec:
  # If changing this, ensure REQUIRED_CONTACT_POINT_NR is more than half this number, to ensure only one cluster
  # will ever bootstrap when starting from scratch.
  replicas: 3
  selector:
    matchLabels:
      app: "shopping-cart"
  template:
    metadata:
      labels:
        app: "shopping-cart"
    spec:
      containers:
      - name: "shopping-cart"
        image: "lightbend-docker-registry.bintray.io/octo/akka-grpc-ddata-shopping-cart:1.0"

        ports:
        - containerPort: 8558
          name: "management"

        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 0.25
            memory: 256Mi

        readinessProbe:
          httpGet:
            path: "/ready"
            port: "management"
          periodSeconds: 10
          failureThreshold: 10
          initialDelaySeconds: 20
        livenessProbe:
          httpGet:
            path: "/alive"
            port: "management"
          periodSeconds: 10
          failureThreshold: 10
          initialDelaySeconds: 20
