istio-ingress.yaml
# Not 100% sure if all this is needed.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shopping-cart-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopping-cart
spec:
  hosts:
  - "*"
  gateways:
  - shopping-cart-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: shopping-cart
        port:
          number: 80
